fix: `WeatherChangeEvent` spamming refactor: remove `SpawnPointChunkLoader`